# pepalyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  DOCDIFF_cc.md  DOCDIFF_g.md  DOCSPEC.md  README.md  pyproject.toml
.github/workflows/: test.yml
pepalyzer/: __init__.py  aggregator.py  cli.py  formatters.py  git_adapter.py  models.py  pep_metadata.py  pep_parser.py  signals.py
tests/: test_aggregator.py  test_basic.py  test_formatters.py  test_git_adapter.py  test_models.py  test_pep_metadata.py  test_pep_parser.py  test_signals.py
