[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pepalyzer"
version = "0.1.0"
dependencies = [
    "click",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "black",
    "mypy",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-import-order",
    "flake8-quotes",
    "pep8-naming",
    "bandit[toml]",
]

[project.scripts]
pepalyzer = "pepalyzer.cli:main"

[tool.setuptools]
packages = ["pepalyzer"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
junit_xml = "reports/mypy.xml"
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
warn_unreachable = true

[tool.bandit]
# B101: assert_used (not an issue in tests)
# B404: import_subprocess (intentional - we need to call git)
# B603: subprocess_without_shell_equals_true (secure - we don't use shell=True)
# B607: start_process_with_partial_path (acceptable - 'git' is a standard command)
skips = ["B101", "B404", "B603", "B607"]
exclude_dirs = ["tests", "test_*"]
